clusters/cl01tl/manifests/radarr-standup/HTTPRoute-http-route-radarr-standup.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-radarr-standup
  namespace: radarr-standup
  labels:
    app.kubernetes.io/name: http-route-radarr-standup
    app.kubernetes.io/instance: radarr-standup
    app.kubernetes.io/part-of: radarr-standup
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - radarr-standup.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: radarr-standup
          port: 80
          weight: 100
